# cboilerplate

./: LICENSE  README  README.md  configure.ac
src/: Makefile.am  example.c  example.h  example_main.c
tests/: Makefile.am  tests.h  tests_example.c  tests_main.c
